<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/tutorial_textview"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_modes"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modes_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/modes_description" />

        <TextView
            android:id="@+id/format_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/tutorial_formats"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/format_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/format_description" />

        <TextView
            android:id="@+id/commands_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/tutorial_commands"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commands_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/comm_description" />

        <TextView
            android:id="@+id/song_opt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/tutorial_options"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/song_opt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/song_opt_description" />

    </LinearLayout>
</ScrollView>