<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8sp"
        tools:context=".tutorial.TutorialActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_textview"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/modes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modes_textview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modes_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="" />

        <TextView
            android:id="@+id/format_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/formats_textview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/format_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/commands_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/commands_textview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commands_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="" />

        <TextView
            android:id="@+id/song_opt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/game_options_textview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/song_opt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="" />

    </LinearLayout>
</ScrollView>