<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <include layout="@layout/fragment_dialog_loading" />

    <TextView
        android:id="@+id/textView_dynamic_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/multi_dynamic_link"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_baseline_share"
        app:drawableRightCompat="@drawable/ic_baseline_share" />

    <Button
        android:id="@+id/show_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/show_qr" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/QR_code"
        android:visibility="gone"
        android:contentDescription="@string/qr_code_description" />

</LinearLayout>